<resources>
    <string name="app_name">EVote</string>
    <string name="greet_text">Hello %1$s!\nPlease fill out the form to set started</string>
    <string name="voter">Voter</string>
    <string name="commissioner">Commissioner</string>
    <string name="aadhaar_number">Aadhaar number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="my_details">My details</string>
    <string name="vote">Vote</string>
    <string name="voter_list">Voter list</string>
    <string name="vote_count">Vote count</string>
    <string name="ok">\"OK\"</string>
</resources>